# Skill-Finder-AI-

./: .gitignore  CURRICULUM_App_Building.md  CURRICULUM_Farming.md  CURRICULUM_Fundamentals_of_American_Law_and_Legal_Reasoning.md  CURRICULUM_Fundamentals_of_American_Legal_Principles.md  CURRICULUM_Machine_Learning_Developer.md  CURRICULUM_Physical_Security_Awareness.md  CURRICULUM_Python_Programming.md  LICENSE  README.md  agents-cli-manifest.yaml  pyproject.toml  requirements.txt
.agents/: __init__.py  app.py  graph.py  init.py  pathfinder.py  run_local.py  schemas.py  security_bouncer.py
.agents/skills/web_search/: __init__.py  search.py
.agents/tests/: conftest.py  test_curriculum.py  test_security.py
app/: agent.py
app/app_utils/: telemetry.py
tests/: conftest.py
web/: server.py
web/static/: app.js  index.html  style.css
