[project]
name = "capstone-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=2.3.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "semgrep>=1.79.0",
    "google-cloud-aiplatform",
    "google-cloud-logging",
    "fastapi",
    "uvicorn",
]
